# curl-effector

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  rust-toolchain.toml  validate.sh
.github/workflows/: release.yml  tests.yml
cid/: Cargo.toml  built.rs
effector/: Cargo.toml  module.yaml
effector/src/: import.rs  main.rs  utils.rs
effector/test_artifacts/: Config.toml
imports/: Cargo.toml
imports/src/: lib.rs
types/: Cargo.toml
