[package]
name = "curl-effector-imports"
version = "0.1.2"
edition = "2021"
publish = true
description = "cURL Effector Bindings"
license = "Apache-2.0"
authors = ["Fluence Labs"]
repository = "https://github.com/fluencelabs/curl-effector"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl-effector-types = { workspace = true }
marine-rs-sdk = { workspace = true }
